--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -24,7 +24,6 @@
 }
 
 body {
-    height: 784px;
     min-width: 881px;
     background: #1B1B1B;
     user-select: none;
@@ -57,6 +56,10 @@ td {
     padding-top: 14px;
     background-image: linear-gradient(top, #383838 0%, #1F1F1F 5%, #161616 100%);
     background-image: -webkit-gradient(linear, left top, left bottom, from(#1F1F1F), to(#161616));
+}
+
+.drum-label:active {
+    border: 2px solid white;
 }
 
 .even {
@@ -146,13 +149,24 @@ td {
     text-align: center;
     vertical-align: bottom;
     transition: color .3s ease;
-    height: 50px;
+    height: 60px;
 }
 
 .control:active {
     box-shadow: 0 0 1px 1px rgb(10, 10, 10), inset 0 2px 2px 0 black;
+    border: 2px solid white;
 }
 
 .disabled {
     box-shadow: 0 0 1px 1px rgb(10, 10, 10) !important;
+}
+
+.glyphicon {
+    font-size: 28px;
+}
+
+.button-label {
+    color: #818181;
+    padding-top: 10px;
+    font-family: Arial;
 }
